Some minor things
HTML:
+ Added div for the skilltree
- Removed "Hello world!"
- Removed sample text

JS:
- Removed openDevTools
+ Now loads skilltree

Files:
+ Added config file

--- a/index.html
+++ b/index.html
@@ -31,14 +31,12 @@
     </header>
 
     <div id="main">
-      <h1 class="title">Hello World!</h1>
-      <p class="center grey">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est sem, ornare sit amet ex eu, auctor laoreet felis. Maecenas pharetra euismod convallis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam iaculis condimentum dapibus. Cras urna risus, ultricies id ullamcorper quis, rutrum sit amet leo. Proin sed ultricies lectus, nec efficitur massa. Nulla hendrerit tellus at mauris fermentum suscipit. Praesent posuere nunc in ante congue, ac eleifend justo mollis.
-        Nunc luctus felis sed massa sagittis viverra. Vestibulum et maximus est. Aenean justo leo, cursus at vehicula vitae, rhoncus a turpis. Maecenas cursus imperdiet risus et ultrices. Fusce vestibulum convallis leo, quis egestas mi sagittis sit amet.
-        <br><br>
-        Maecenas vitae metus quis elit vehicula ultricies ut sed metus. Ut sapien diam, varius pretium augue quis, condimentum ullamcorper lectus. Nam facilisis a eros sed ultricies. Sed sit amet congue est. Vivamus id auctor tellus. Fusce sit amet erat non erat euismod mattis ac eu odio. Morbi lobortis finibus tortor at bibendum. In imperdiet mattis arcu id porta. Proin sed tristique nisi. Nulla tincidunt eros finibus, pretium lacus sit amet, fermentum nibh.
-        Quisque porta, arcu et ullamcorper ornare, sapien tortor viverra eros, a pretium velit eros non turpis.
-      </p>
+      <h1 class="title">Skilltree</h1>
+      <div id="skilltree_view">
+        <p>
+          Skilltree goes here later
+        </p>
+      </div>
     </div>
 
     <script>
