--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <title>CrossCode Skilltree Editor</title>
     <link rel="stylesheet" href="./css/main.css">
   </head>
+
   <body>
     <header id="titlebar">
       <div id="drag-region">
@@ -33,14 +35,15 @@
     <div id="main">
       <h1 class="title">Skilltree</h1>
       <div id="skilltree_view">
+        <button class="button_1" id="save"><span>Save</span></button>
         <p>
           Skilltree goes here later
         </p>
       </div>
     </div>
 
-    <script>
-      require('./renderer.js')
-    </script>
+    <script>require('./renderer.js')</script>
+    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
